@@ -625,7 +625,7 @@ bool CGUITreeView::OnEvent( const SEvent &event )
 				{
 				case EMIE_MOUSE_WHEEL:
 					if ( ScrollBarV )
-						ScrollBarV->setPos( ScrollBarV->getPos() + (s32)event.MouseInput.Wheel * -10 );
+						ScrollBarV->setPos( ScrollBarV->getPos() + (event.MouseInput.Wheel < 0 ? -1 : 1) * -10 );
 					return true;
 					break;
 
